// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Skill component behaviour adds proficiency bonus when proficient 1`] = `
<div
  className="Skill"
>
  <Checkbox
    ariaLabelledBy="skillName"
    checked={true}
    id="testCheckbox"
    onChange={[Function]}
  />
  <div
    className="Skill__modifier"
  >
    NaN
  </div>
  <div
    className="Skill__name"
    id="skillName"
  >
    test
  </div>
</div>
`;

exports[`Skill component behaviour sets proficiency when checked 1`] = `
<div
  className="Skill"
>
  <Checkbox
    ariaLabelledBy="skillName"
    checked={false}
    id="testCheckbox"
    onChange={[Function]}
  />
  <div
    className="Skill__modifier"
  />
  <div
    className="Skill__name"
    id="skillName"
  >
    test
  </div>
</div>
`;

exports[`Skill component rendering renders Skill 1`] = `
<div
  className="Skill"
>
  <Checkbox
    ariaLabelledBy="skillName"
    checked={false}
    id="testCheckbox"
    onChange={[Function]}
  />
  <div
    className="Skill__modifier"
  />
  <div
    className="Skill__name"
    id="skillName"
  >
    test
  </div>
</div>
`;
